@@ -25,6 +25,12 @@ torch::jit::Node *createConstantFloat(torch::jit::Graph *graph,
                                       const std::vector<double> &data,
                                       const std::vector<int64_t> &new_shape);
 
+torch::jit::Node *
+createCustomOperation(torch::jit::Graph *graph,
+                      const std::vector<torch::jit::Value *> &inputs,
+                      const std::string &name, const std::string &domain,
+                      std::int64_t domainVersion, std::int64_t numOutputs);
+
 torch::jit::Node *createCast(torch::jit::Graph *graph, torch::jit::Value *A,
                              c10::ScalarType scalar);
 
