@@ -19,6 +19,20 @@ begin_ipu_block = torch.ops.poptorch.begin_ipu_block
 end_ipu_block = torch.ops.poptorch.end_ipu_block
 ipu_print_tensor = torch.ops.poptorch.ipu_print_tensor
 
+
+def custom_op(inputs, name, domain, domain_version, example_outputs):
+
+    transformed_outputs = []
+    for output in example_outputs:
+        # Dead code which will get eliminated but will safely allow the same input to be provided to example_output (since it is only supposed to be a template). Otherwise the compiler may recognise th alias.
+        transformed_outputs.append(torch.zeros_like(output))
+
+    return torch.ops.poptorch.custom_operation(inputs, name, domain,
+                                               domain_version,
+                                               len(transformed_outputs),
+                                               transformed_outputs)
+
+
 # Create a poptorch logger which outputs to the console INFO messages and above
 logger = logging.getLogger("poptorch::python")
 if os.environ.get("POPTORCH_LOG_LEVEL") in ["DEBUG", "TRACE", "TRACE_ALL"]:
