@@ -6,11 +6,14 @@ function(add_poptorch_py_unit_test name)
            WORKING_DIRECTORY ${CMAKE_CURRENT_BUILD_DIR})
 endfunction()
 
+add_subdirectory(custom_ops)
+
 add_poptorch_py_unit_test(activations)
 add_poptorch_py_unit_test(batching)
 add_poptorch_py_unit_test(bert_small_and_medium)
 add_poptorch_py_unit_test(convs)
 add_poptorch_py_unit_test(custom_loss)
+add_poptorch_py_unit_test(custom_ops)
 add_poptorch_py_unit_test(half)
 add_poptorch_py_unit_test(inputs)
 add_poptorch_py_unit_test(losses)
